# AiPOProject

./: .clang-tidy  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini
App/: fast_carver.hpp  main.cpp  seam_carver.hpp
